# Medical-OCR-Validator

./: .gitignore  README.md  candidates.py  compare.py  data_extract.py  main.py  pyproject.toml
dataset/: cleaneed.txt  data.txt  extractcand.txt  final.txt
medical_ocr_matcher.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
