[project]
name = "medical-ocr-matcher"
version = "0.1.0"
requires-python = ">=3.9"

dependencies = [
    "levenshtein>=0.27.1",
    "paddleocr>=3.4.0",
    "paddlepaddle>=3.3.1",
    "pandas>=2.3.3",
    "rapidfuzz>=3.6.0",
    "ultralytics>=8.4.33",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "demo"]
